# bobcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/bobcpp/: AbstractClient.h  Data.h  Exception.h  QtClient.h  bobcpp.h
src/: Exception.cpp  QtClient.cpp  bobcpp.cpp
